classe de teste

--- a/force-app/main/default/classes/testetest.cls
+++ b/force-app/main/default/classes/testetest.cls
@@ -1,7 +1,8 @@
-public class testetest {
+@isTest 
+private class testetest {
 
     static testMethod void testName() {
         testeUtil.testeMetd('1');
-        
+
     }
 }
